--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -17,3 +17,9 @@ jobs:
       - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY  }}
+          SHOW_TITLE: true
+          BLOCKS: ░▒▓█
+          CODE_LANG: txt
+          TIME_RANGE: all_time
+          LANG_COUNT: 7
+          SHOW_TIME: true
